--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -3,8 +3,8 @@
 
     <string name="app_name">sharedexpense</string>
     <string name="action_settings">Settings</string>
-    <string name="title_section1">Section 1</string>
-    <string name="title_section2">Section 2</string>
-    <string name="title_section3">Section 3</string>
+    <string name="title_section1_edit_expense">Info</string>
+    <string name="title_section2_edit_expense">People</string>
+    <string name="title_activity_expense_edit">New/Edit Expense</string>
 
 </resources>
